<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/firstbegin"
        android:alpha="0.8"
>
    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:ems="10"
            android:id="@+id/answer"
            app:layout_constraintBaseline_toBaselineOf="@+id/answertest"
            app:layout_constraintStart_toEndOf="@+id/answertest" android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:ems="10"
            android:id="@+id/question"
            app:layout_constraintBaseline_toBaselineOf="@+id/questiontest"
            app:layout_constraintStart_toEndOf="@+id/questiontest" android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:ems="10"
            android:id="@+id/age"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toEndOf="@+id/agetest" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/agetest" android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp"/>
    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:ems="10"
            android:id="@+id/sex"
            app:layout_constraintBaseline_toBaselineOf="@+id/sextest" app:layout_constraintStart_toEndOf="@+id/sextest"
            android:layout_marginEnd="41dp" android:layout_marginRight="41dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <!--    <ImageView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:scaleType="fitXY"-->
    <!--            android:alpha="0.5"-->
    <!--            app:srcCompat="@mipmap/firstbegin"-->
    <!--            android:id="@+id/imageView"-->
    <!--            tools:layout_editor_absoluteY="183dp" tools:layout_editor_absoluteX="0dp"/>-->

    <Button
            android:text="注  册"
            android:textSize="28dp"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:id="@+id/register" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/answer" android:layout_marginTop="296dp"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/answer"/>
    <TextView
            android:text="用户名:"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView4"
            android:layout_marginTop="126dp"
            app:layout_constraintEnd_toStartOf="@+id/question" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp" android:layout_marginEnd="27dp" android:layout_marginRight="27dp"/>
    <TextView
            android:text="密   码："
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toStartOf="@+id/answer"
            android:layout_marginBottom="77dp" app:layout_constraintBottom_toTopOf="@+id/agetest"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp" android:layout_marginEnd="17dp" android:layout_marginRight="17dp"/>
    <TextView
            android:text="性 别:"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:id="@+id/sextest"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/answer" app:layout_constraintEnd_toStartOf="@+id/sex"
            android:layout_marginBottom="39dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp"
            app:layout_constraintBottom_toBottomOf="@+id/age" android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"/>
    <TextView
            android:text="年 龄:"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/agetest"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toStartOf="@+id/age"
            android:layout_marginBottom="17dp" app:layout_constraintBottom_toTopOf="@+id/questiontest"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp" android:layout_marginEnd="17dp" android:layout_marginRight="17dp"/>


    <TextView
            android:text="密保问题:"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/questiontest"
            app:layout_constraintTop_toBottomOf="@+id/agetest" app:layout_constraintEnd_toStartOf="@+id/question"
            android:layout_marginBottom="23dp" app:layout_constraintBottom_toTopOf="@+id/answertest"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp" android:layout_marginEnd="17dp" android:layout_marginRight="17dp"/>

    <TextView
            android:text="答 案:"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/answertest"
            app:layout_constraintTop_toBottomOf="@+id/questiontest" app:layout_constraintEnd_toStartOf="@+id/answer"
            android:layout_marginBottom="211dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"/>
    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:ems="10"
            android:id="@+id/question"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/answer"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp" app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>